tests/machine/x/swift/cast_struct.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:40:28Z
struct Todo: Equatable {
    var title: String
}
let todo = Todo(title: "hi")
print((todo["title"] as! String))
